adds minor improvements

--- a/mytimer.kv
+++ b/mytimer.kv
@@ -24,7 +24,7 @@
                 background_color: 0.2, 0.31875, 0.2, 1
                 on_press: root.start()
                 Image:
-                    source:"images\play_2.png"
+                    source:"images/play_2.png"
                     y: self.parent.y + self.parent.height/2 - self.height/2
                     x: self.parent.x + self.parent.width/2
                     size: 40, 40
@@ -33,7 +33,7 @@
                 background_color: 0.2, 0.31875, 0.2, 1
                 on_press: root.stop()
                 Image:
-                    source:"images\pause_2.png"
+                    source:"images/pause_2.png"
                     y: self.parent.y + self.parent.height/2 - self.height/2
                     x: self.parent.x + self.parent.width/2
                     size: 40, 40
@@ -51,7 +51,7 @@
             id: clock
             text: '0:00:00'
             font_size: (self.height + self.width) / 5
-            font_name: 'Digital-7/Digital-7'
+            font_name: 'digital-7/digital-7'
             background_color: "17022a"
         
     
